--- a/ForumCinema/forum/templates/forum/discover_page.html
+++ b/ForumCinema/forum/templates/forum/discover_page.html
@@ -2,16 +2,21 @@
 
 {% load crispy_forms_tags %}
 {% load static %}
-<script src="{% static '/script/sidebar.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 
 
 {% block content %}
   <div class="container py-5 h-100" data-spy="scroll" data-target="#myScrollspy" data-offset="15">
+    <div class = "row mb-3 d-flex justify-content-center"> 
+        <div class="col-md-1 input-group w-50 mb-3">
+            <input type="search" class="form-control " placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+            <button type="button" class="btn btn-outline-primary">Cerca</button>
+          </div>
+    </div>
     <div class="row d-flex justify-content-center align-items-top h-100">
-      <div class="col-lg-7">
         {% for review in object_list %}
+        <div class="col-md-6">
         <div class="card mb-3" style="border-radius: 15px;">
           <div class="card-body p-4">
             <div class="d-flex text-black">
@@ -50,51 +55,8 @@
             </div>
           </div>
         </div>
-        {% endfor %}
       </div>
-      <div class="col-lg-5" id="myScrollspy">
-        <div class="" data-spy="" >
-        <div class="card d-flex align-items-middle" style="border-radius: 15px;">
-          <div class="card-body p-4 d-flex justify-content-between">
-            {% if user.is_authenticated %}
-            <div class = "h5 mt-2"> Benvenuto  <a class = "text-black" style = "text-decoration:none" href = "{% url 'forum:profilo' request.user.pk %}"><strong>{{request.user.username}}</strong> </a></div>
-            {% else %}
-            <div class = "h5 mt-2"> <a class = "text-black" style = "text-decoration:none" href = "{% url 'login' %}">Entra nel club</a> </div>
-            {% endif %}
-            
-            <a type="button" class="btn btn-dark " href="{% url 'forum:pubblicareview' %}">Scrivi Recensione</a>
-          </div>
-        </div>
-
-        <div class = "container ">
-          <div class = "row">
-          <div class="card mb-4 mb-md-0 mt-2 overflow-auto">
-            <div class="card-body">
-                <div class="d-flex justify-content-center align-items-center mb-4">
-                    <p class="lead fw-normal mb-0">Suggerimenti</p>
-                  </div>
-                           
-            {% for utenti in randomuser.all %}
-            <div class="d-flex align-items-middle" style="border-radius: 15px;">
-            <div class="card-body justify-content-between">
-              <div class="d-flex text-black">
-                      <div class="flex-grow-1 ms-3 ">
-                        <img src="{{utenti.userprofile.avatar.image}}" alt="avatar" class="img-fluid" style="width: 50px; height:40px; border-radius:10px; margin-right:3px"> 
-                        <a class= "ml-2 h5 font-weight-bold" style = "text-decoration:none" href="{% url 'forum:profilo' utenti.pk %}">{{ utenti.username }}</a>
-                      </div>
-                      <a type="button" class="btn btn-primary me-1" href ="{% url 'forum:profilo' utenti.pk %}">Visita</a>
-              </div>
-            </div>
-          </div>
-            {% endfor %}
-        
-          
-              <div>
-              </div>
-          </div>
-        </div>
-    
-      </div>
+      {% endfor %}   
     </div>
   </div>
 
