--- a/ForumCinema/forum/templates/forum/review_detail.html
+++ b/ForumCinema/forum/templates/forum/review_detail.html
@@ -24,7 +24,7 @@
                 <p> Interazioni <p>
               {{ object.number_of_likes }} Mi piace
             </div>
-            <form action="{% url 'forum:reviewlike' object.id %}" method="POST">
+            <form action="{% url 'forum:reviewlike' object.id %}" method="POST" class = "mb-2">
                 {% csrf_token %}
             
                 {% if post_is_liked %}
@@ -38,23 +38,10 @@
         <div class="col-lg-8">
           <div class="card mb-4">
             <div class="card-body">
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">Nome Completo</p>
-                </div>
-                <div class="col-sm-9">
-                  <p class="text-muted mb-0">{{ object.first_name }} {{ object.last_name }}</p>
-                </div>
+              <div class="d-flex justify-content-between align-items-center mb-4">
+                <p class="lead fw-normal mb-0">Recensione</p>
               </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">Email</p>
-                </div>
-                <div class="col-sm-9">
-                  <p class="text-muted mb-0">{{ object.email }}</p>
-                </div>
-            </div>
+              {{object.descrizione}}
           </div>
         </div>
 
@@ -75,20 +62,17 @@
           <div class="card-body p-4">
             <div class="d-flex text-black">
               <div class="flex-shrink-0">
-                <img src=""
+                <img src="{{comment.user.userprofile.avatar.image}}"
                   alt="Generic placeholder image" class="img-fluid"
-                  style="width: 180px; border-radius: 10px;">
+                  style="width: 80px; height:50px; border-radius: 10px;">
               </div>
                     <div class="flex-grow-1 ms-3">
-                      <h5 class="mb-1 font-weight-bold">{{ comment.date_posted }}</h5>
-                      <strong>{{ comment.user }}</strong>
+                      <h5 class="mb-1 font-weight-bold">{{ comment.user }}</h5>
+                      <strong>{{ comment.date_posted }}</strong>
                           <div class="d-flex  rounded-3 p-2 mb-2"
                             style="background-color: #efefef;">
                             <div>
                                 <p>{{ comment.descrizione|linebreaks }}</p>
-                            </div>
-                            <div class="d-flex pt-1">
-                             <p> {{ mipiace.all.count }}</p>
                             </div>
                           </div>
                     </div>
@@ -99,11 +83,12 @@
         <p>Non ci sono commenti :(</p>
         {% endfor %}
       
-        
-            <div>
+
+      </div>
             </div>
         </div>
       </div>
+
          
             
       </div>
