--- a/ForumCinema/forum/templates/forum/discover_page.html
+++ b/ForumCinema/forum/templates/forum/discover_page.html
@@ -16,8 +16,8 @@
     </div>
     <div class="row d-flex justify-content-center align-items-top h-100">
         {% for review in object_list %}
-        <div class="col-md-6">
-        <div class="card mb-3" style="border-radius: 15px;">
+        <div class="col-md-6 mb-3">
+        <div class="card h-100" style="border-radius: 15px;">
           <div class="card-body p-4">
             <div class="d-flex text-black">
               <div class="flex-shrink-0">
