--- a/ForumCinema/templates/home.html
+++ b/ForumCinema/templates/home.html
@@ -2,13 +2,10 @@
 
 {% load crispy_forms_tags %}
 {% load static %}
-<script src="{% static '/script/sidebar.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 
 
 {% block content %}
-  <div class="container py-5 h-100" data-spy="scroll" data-target="#myScrollspy" data-offset="15">
+  <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-top h-100">
       <div class="col-lg-7">
         {% for review in object_list %}
@@ -52,8 +49,8 @@
         </div>
         {% endfor %}
       </div>
-      <div class="col-lg-5" id="myScrollspy">
-        <div class="" data-spy="" >
+      <div class="col-5 secondsidebar">
+        <div class="content-wrapper" >
         <div class="card d-flex align-items-middle" style="border-radius: 15px;">
           <div class="card-body p-4 d-flex justify-content-between">
             {% if user.is_authenticated %}
@@ -102,9 +99,10 @@
 {% endblock content %}
 
 
+{% block myscript %}
+<script src="{% static '/script/sidebar.js' %}"></script>
 
 
-
-
+{% endblock myscript %}
 
 
