--- a/ForumCinema/forum/templates/forum/group_detail.html
+++ b/ForumCinema/forum/templates/forum/group_detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
+{% load forum_extras %}
 {% block mycss %}
 <link rel="stylesheet" href="{% static '/css/followers.css' %}">
 
@@ -62,7 +63,7 @@
                                       <li class="d-flex justify-content-between mb-4">
                                         <img src="{{ post.creator.userprofile.avatar.image }}" alt="avatar"
                                           class="rounded-circle d-flex align-self-start me-3 shadow-1-strong" width="60" height="60">
-                                        <div class="card">
+                                        <div class="card w-100">
                                           <div class="card-header d-flex justify-content-between p-3">
                                             <p class="fw-bold mb-0">{{ post.creator.username }}</p>
                                             <p class="text-muted small mb-0"><i class="far fa-clock"></i> {{post.date_posted}}</p>
@@ -75,6 +76,19 @@
                                              {{post.descrizione}}
                                             </p>
                                           </div>
+                                          {% if post.creator == request.user %}
+                                          <div class="card-footer">
+                                            <div class="container">
+                                              <div class = "row align-items-center">
+                                                <div class = "col-8"></div>
+                                                <div class = "col-4 d-flex align-items-end">
+                                                  <a type="button" class="btn btn-outline-success me-1 flex-grow-1" href ="">Modifica</a>
+                                                  <a type="button" class="btn btn-outline-danger me-1 flex-grow-1" href ="{% url 'forum:cancellapost' post.pk object.pk %}">Elimina</a>
+                                                </div>
+                                              </div> 
+                                            </div>
+                                          </div>
+                                          {% endif %}
                                         </div>
                                       </li>
                                       {% endfor %}
@@ -85,21 +99,82 @@
                               </div>
                               
                               <div id="Sondaggi" class="tabcontent">
-                                {% for utenti in following.all %}
-                                <div class="d-flex align-items-middle" style="border-radius: 15px;">
-                                <div class="card-body justify-content-between">
-                                <div class="d-flex text-black">
-                                        <div class="flex-grow-1 ms-3 ">
-                                            <img src="{{utenti.avatar.image}}" alt="avatar" class="img-fluid" style="width: 50px; height:40px; border-radius:10px; margin-right:3px"> 
-                                            <a class= "ml-2 h5 font-weight-bold" style = "text-decoration:none" href="{% url 'forum:profilo' utenti.user.pk %}">{{ utenti.user.username }}</a>
-                                        </div>
-                                        <a type="button" class="btn btn-primary me-1" href ="{% url 'forum:profilo' utenti.user.pk %}">Visita</a>
-                                </div>
-                                </div>
-                                </div>
-                                {% endfor %}
-                              </div>
+                                {% if request.user == object.creator %}
+                                <a type="button" class="btn btn-primary me-1 mb-4" href ="{% url 'polls:createpoll' object.pk %}">Crea Sondaggio</a>
+                                {% endif %}
+                                <div class = "row d-flex justify-content-center">
+                                <div class="col-11 my-2">
 
+                                    <ul class="list-unstyled ">
+                                        {% for poll in polls %}
+                                      <li class=" mb-4">
+                                        <div class="mx-0 mx-sm-auto">
+                                          <div class="card">
+                                            <div class="card-body">
+                                              <div class="text-center">
+                                                <i class="far fa-file-alt fa-4x mb-3 text-primary"></i>
+                                                  {{poll.text}}
+                                                </p>
+                                              </div>
+                                        
+                                              <hr />
+                                        
+                                              <form class="px-4" action="">
+                                                <p class="text-center"><strong>Totale votanti: {{ poll.get_vote_count }}</strong></p>
+                                                <div class="progress mt-3 mb-2">
+                                                  {% for choice in poll.get_result_dict %}
+                                                  <div class="progress-bar bg-{{ choice.alert_class }}" role="progressbar" style="width: {{ choice.percentage }}%;"
+                                                      aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"><b>
+                                                          {{choice.text|truncatewords:2}}-{{choice.percentage|floatformat}}%</b>
+                                                  </div>
+                                                  {% endfor %}
+                                  
+                                              </div>
+                                              <ul class="list-group">
+                                                  {% for choice in poll.choice_set.all %}
+                                                    {% user_vote request.user poll as uservotes %}
+                                                      {% for uservote in uservotes %}
+                                                        {% if uservote.choice.choice_text == choice.choice_text %}
+                                                          <li class="list-group-item d-flex justify-content-between align-items-center bg-primary">
+                                                            {{ choice.choice_text }}
+                                                            <span class="badge badge-primary badge-pill text-black">{{ choice.get_vote_count }}</span>
+                                                          </li>
+                                                        {% else %}
+                                                          <li class="list-group-item d-flex justify-content-between align-items-center">
+                                                            {{ choice.choice_text }}
+                                                            <span class="badge badge-primary badge-pill text-black">{{ choice.get_vote_count }}</span>
+                                                          </li>
+                                                        {% endif %}
+                                                        {% empty %}
+                                                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                                                          {{ choice.choice_text }}
+                                                          <span class="badge badge-primary badge-pill text-black">{{ choice.get_vote_count }}</span>
+                                                        </li>
+                                                      {% endfor %}
+                                                  {% endfor %}
+                                              </ul>
+                                               
+                                        
+                                              </form>
+                                            </div>
+                                            <div class="card-footer text-end">
+                                              {% if poll.owner == request.user %}
+                                              <a type="button" class="btn btn-outline-success me-1 flex-grow-1" href ="{% url 'polls:editpoll' poll.pk object.pk %}">Modifica</a>
+                                              {% endif %}
+                                              {% user_can_vote request.user poll as result %}
+                                              {% if not result %}
+                                              <a type="button" class="btn btn-primary me-1 flex-grow-1" href ="{% url 'polls:detailpoll' poll.pk object.pk %}">Vota</a>
+                                              {% endif %}
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </li>
+                                      {% endfor %}
+                                    </ul>
+                            
+                                  </div>
+                                </div>
+                              </div>
 
                         </div>
                         <div class = "col-4"> 
@@ -110,7 +185,17 @@
                                       <div class="d-flex justify-content-center align-items-center mb-4">
                                           <p class="lead fw-normal mb-0">Membri</p>
                                         </div>
-                                                 
+                                    <div class="d-flex align-items-middle" style="border-radius: 15px;">
+                                          <div class="card-body justify-content-between">
+                                            <div class="d-flex text-black">
+                                                    <div class="flex-grow-1 ms-3 ">
+                                                      <img src="{{object.creator.userprofile.avatar.image}}" alt="avatar" class="img-fluid" style="width: 50px; height:40px; border-radius:10px; margin-right:3px"> 
+                                                      <a class= "ml-2 h5 font-weight-bold" style = "text-decoration:none" href="{% url 'forum:profilo' object.creator.pk  %}">{{ object.creator.username }}</a>
+                                                    </div>
+                                                    <a type="button" class="btn btn-primary me-1" href ="{% url 'forum:profilo' object.creator.pk %}">Visita</a>
+                                            </div>
+                                          </div>
+                                        </div>
                                   {% for utenti in object.members.all %}
                                   <div class="d-flex align-items-middle" style="border-radius: 15px;">
                                   <div class="card-body justify-content-between">
