--- a/ForumCinema/forum/templates/forum/profilo.html
+++ b/ForumCinema/forum/templates/forum/profilo.html
@@ -31,11 +31,11 @@
               </div>
               <div class="row justify-content-center">
                 <div class = "col-lg-5">
-                     <b> <a sytle = "text-decoration:none" class = "text-black" href="{% url 'forum:followlist' object.pk %}"> Seguaci </a> </b>
+                     <b> <a  class = "btn text-black" href="{% url 'forum:followlist' object.pk %}"> Seguaci </a> </b>
                     <p class="text-muted"> {{ object.userprofile.number_of_following }} </p>
                 </div>
               <div class = "col-lg-5"> 
-                    <b> <a sytle = "text-decoration:none" class = "text-black" href="{% url 'forum:followlist' object.pk %}"> Seguiti </a></b>
+                    <b> <a  class = "btn text-black" href="{% url 'forum:followlist' object.pk %}"> Seguiti </a></b>
                     <p class="text-muted"> {{ object.userprofile.followers.count }} </p>
                   </div>
                 </div> 
@@ -101,6 +101,10 @@
           <div class="card-body">
               <div class="d-flex justify-content-between align-items-center mb-4">
                   <p class="lead fw-normal mb-0">Recensioni Pubblicate</p>
+                  {% if request.user == object %}
+                  <a type="button" class="btn btn-dark " href="{% url 'forum:pubblicareview' %}">Scrivi Recensione</a>
+                  {% endif %}
+                  
                 </div>
               
                          
@@ -134,6 +138,7 @@
                   <a type="button" class="btn btn-outline-primary me-1 flex-grow-1" href ="{%url 'forum:detailreview' review.pk %}">Dettagli</a>
                   {% if request.user == object %}
                   <a type="button" class="btn btn-outline-success me-1 flex-grow-1" href ="{% url 'forum:modificareview' review.pk %}">Modifica</a>
+                  <a type="button" class="btn btn-outline-danger me-1 flex-grow-1" href ="{% url 'forum:cancellareview' review.pk %}">Elimina</a>
                   {% endif %}
                   
                 </div>
