--- a/ForumCinema/templates/registration/login.html
+++ b/ForumCinema/templates/registration/login.html
@@ -7,21 +7,31 @@
 
 {% block content %} 
 
-{% if "notok" in request.GET.auth %}
-<div class="alert alert-danger" role="alert">
-  Si è arrivati qui in quanto non si dispone dei permessi necessari per il servizio scelto!
-</div>
-{% endif %}
 
-<div class="card text-center bt-auto container-fluid" style="width: 30rem;">
-    <img class="card-img-top" src="{% static '/img/queibraviragazzi.jpg' %}" alt="Card image cap">
-    <div class="card-body justify-content-center ">
-      <h5 class="card-title">Login</h5>
-      <form method="post" > {% csrf_token %}
-        {{form | crispy}}
-        <input type="submit" class="btn btn-dark" value="Entra ora">
-        </form>
+<div class = "container mt-5">
+  {% if "notok" in request.GET.auth %}
+      <div class="alert alert-danger text-center" role="alert">
+        Si è arrivati qui in quanto non si dispone dei permessi necessari per il servizio scelto!
+      </div>
+  {% endif %}
+  <div class = "row ">
+    <div class = "col-lg-10 d-flex justify-content-center align-items-center">    
+      <div class="card text-center bt-auto mt-5 w-50 ">
+        <img class="card-img-top" src="{% static '/img/queibraviragazzi.jpg' %}" alt="Card image cap">
+        <div class="card-body justify-content-center ">
+          <h5 class="card-title">Login</h5>
+          <form method="post" > {% csrf_token %}
+            {{form | crispy}}
+            <input type="submit" class="btn btn-dark" value="Entra ora">
+            </form>
+        </div>
+        <div class = "card-footer">
+          Non sei iscritto? <a href = "{% url 'register' %}">Registrati Ora</a>
+        </div>
+      </div>
     </div>
   </div>
+</div>
+
 {% endblock content %}
 
