--- a/ForumCinema/templates/registrazione.html
+++ b/ForumCinema/templates/registrazione.html
@@ -2,21 +2,40 @@
 
 {% load crispy_forms_tags %}
 {% load static %}
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
 
 {% block title %} Registrazione {% endblock %}
 
 
 {% block content %}
-<div class="card text-center w3-display-middle" style="width: 30rem;">
-    <img class="card-img-top" src="{% static '/img/queibraviragazzi.jpg' %}" alt="Card image cap">
-    <div class="card-body justify-content-center ">
-      <h5 class="card-title">Registrazione</h5>
-      <form method="post" > {% csrf_token %}
-        {{form | crispy}}
-        <input type="submit" class="btn btn-dark" value="Registrati ora!">
-        </form>
+<div class="card mt-5 w-100 container text-center" style="width: 30rem;">
+  <div class = "row">
+    <h5 class="card-title mt-3">Registrazione</h5>
+    <div class = "col mt-2">
+      <img class="w-100  " src="{% static '/img/soap.jpg' %}" style = "border-radius: 10px" >
+      <div class = "mt-5">
+        <ul class = "list-unstyled">
+          <li class = "mb-2">Prima regola del MovieCinemaClub: non si parla del MovieCinemaClub. 
+          </li>
+          <li>
+            Seconda regola del MovieCinemaClub: non dovete parlare mai del MovieCinemaClub
+          </li>
+        </ul>
+      </div>
     </div>
+    <div class = "col mt-2">
+      <div class="card-body ">
+        
+        <form method="post" class = "" > {% csrf_token %}
+          {{form | crispy}}
+          <input type="submit" class="btn btn-dark" value="Registrati ora!">
+          </form>
+      </div>
+    </div>
+    <div class = "card-footer mt-2">
+      Sei già iscritto? <a href = "{% url 'login' %}">Accedi Ora</a>
+    </div>
+  </div>
+    
+    
   </div>
 {% endblock %}
