--- a/ForumCinema/forum/templates/forum/elimina_elemento.html
+++ b/ForumCinema/forum/templates/forum/elimina_elemento.html
@@ -1,18 +1,78 @@
 {% extends 'base.html' %}
 
-{% block title %} Cancellazione {{entita}} {% endblock %} 
+{% block title %}  {% endblock %} 
 
 {% block content %} 
+<div class="container">
+    <div class="row g-2 d-flex justify-content-center align-items-center">
+        <div class="col-lg-4 d-flex justify-content-center align-items-center">
+            <div class="card ">
+              <div class="card-body">
+                <h4 class="card-title text-center">Cancellazione {{entita}}
+                    {% if entita == "Review" %}
+                    <img src="{{object.movie.poster}}" alt="avatar"
+                    class="img-fluid w-50 mt-2">
+                    {% elif entita == "Commento" %}
+                    <img src="{{object.user.userprofile.avatar.image}}" alt="avatar"
+                    class="img-fluid w-50 mt-2">
+                    <p class="lead fw-normal mb-2 ">{{object.user.username}}</p>
+                    <p class="lead fw-normal mb-0 text-secondary">{{object.date_posted}}</p>
+                    {% elif entita == "Post" %}
+                    <img src="{{object.creator.userprofile.avatar.image}}" alt="avatar"
+                    class="img-fluid w-50 mt-2">
+                    <p class="lead fw-normal mb-2 ">{{object.creator.username}}</p>
+                    <p class="lead fw-normal mb-0 text-secondary">{{object.date_posted}}</p>
+                    {% elif entita == "CinemaClub" %}
+                    <img src="{{object.copertina.image}}" alt="avatar"
+                    class="img-fluid w-75 mt-2">
+                    <p class="lead fw-normal mb-2">{{ object.nome}}</p>
+                    <p class="lead fw-normal mb-0 text-secondary">Creato da te</p>
+                    {% endif %}
+                </h4>
+            </div>
+            <div class="card-body "  >
+                <div class="d-flex justify-content-center align-items-center mb-4" >
+                  <p class="lead fw-normal mb-0">Descrizione</p>
+                </div>
+                <div style="background-color: #efefef;  border-radius:10px" class = "px-3 py-3">
+                    {% if entita == "CinemaClub" %}
+                        {{object.bio}}
+                    {% else %}
+                    {{object.descrizione}}
+                    {% endif %}
+                  
+                </div>
+              
+            </div>
+            <div class="card-body d-flex justify-content-center align-items-center"  >
+                <form method="post">{% csrf_token %}
+                    <p>Sicuro di voler cancellare questo elemento?</p>
+                
+                    <div class =" mt-4 d-flex justify-content-center">
+                        {% if entita == "Review" %}
+                        <a type = "button" class = "btn btn-outline-dark mx-2" href="{% url 'forum:profilo' request.user.pk %}">Annulla</a>
+                        {% elif entita == "Post" %}
+                        <a type = "button" class = "btn btn-outline-dark mx-2" href="{% url 'forum:detailgroup' object.group.pk %}">Annulla</a>
+                        {% elif entita == "Commento" %}
+                        <a type = "button" class = "btn btn-outline-dark mx-2" href="{% url 'forum:detailreview' object.review.pk %}">Annulla</a>
+                        {% elif entita == "CinemaClub" %}
+                        <a type = "button" class = "btn btn-outline-dark mx-2" href="{% url 'forum:groupspage' %}">Annulla</a>
+                        {% endif %}
+                    <input class = "btn btn-dark" type="submit" value="Conferma">
+                    </div>
+                    
+                </form>
+            </div>
+              </div>
+            </div>
 
 
-<form method="post">{% csrf_token %}
-     
-    {% if entita == "Comment" %}
-    <p>Sicuro di voler cancellare il commento {{ object }}?</p>
-    {% endif %}
+            
 
- 
-    <input type="submit" value="Conferma">
-</form>
+        </div>
+    </div>
+</div>
+
+
 
 {% endblock %}
