--- a/ForumCinema/forum/templates/forum/group_detail.html
+++ b/ForumCinema/forum/templates/forum/group_detail.html
@@ -5,7 +5,7 @@
 {% block mycss %}
 <link rel="stylesheet" href="{% static '/css/followers.css' %}">
 
-<script src="{% static '/script/followers.js' %}"></script>  
+
 {% endblock mycss %}
 
 {% block content %}
@@ -28,6 +28,7 @@
                     </div>
                     <div class = "col-lg-4">
                         <div class="d-flex justify-content-end text-center">
+                          
                             <div>
                               <p class="mb-1 h5">{{object.number_of_members}}</p>
                               <p class="small text-muted ml-0">Membri</p>
@@ -103,6 +104,8 @@
                                           {% endif %}
                                         </div>
                                       </li>
+                                      {% empty %}
+                                      <p>Non ci sono post pubblicati!</p>
                                       {% endfor %}
                                     </ul>
                             
@@ -178,6 +181,8 @@
                                           </div>
                                         </div>
                                       </li>
+                                      {% empty %}
+                                      <p>Non ci sono sondaggi!</p>
                                       {% endfor %}
                                     </ul>
                             
@@ -245,9 +250,25 @@
                               </div>
                         </div>
                     </div>
+                    {% if request.user == object.creator %}
+                          <div class="card mt-2 d-flex align-items-center" style="border-radius: 15px;">
+                            <div class="card-body d-flex justify-content-center">        
+                              <a type="button" class="btn btn-outline-danger " href ="{% url 'forum:eliminagruppo' object.pk %}">Elimina Gruppo</a>
+                            </div>
+                        </div>
+                          {% endif %}
+                    
                 </div>
           </div>
+
         </div>
       </div>
 </div>
 {% endblock content %}
+
+
+
+{% block myscript %}
+<script src="{% static '/script/followers.js' %}"></script>  
+
+{% endblock myscript %}
