--- a/ForumCinema/forum/templates/forum/profilo.html
+++ b/ForumCinema/forum/templates/forum/profilo.html
@@ -102,7 +102,7 @@
               <div class="d-flex justify-content-between align-items-center mb-4">
                   <p class="lead fw-normal mb-0">Recensioni Pubblicate</p>
                   {% if request.user == object %}
-                  <a type="button" class="btn btn-dark " href="{% url 'forum:pubblicareview' %}">Scrivi Recensione</a>
+                  <a type="button" class="btn btn-dark " href="{% url 'home' %}">Scrivi Recensione</a>
                   {% endif %}
                   
                 </div>
