--- a/ForumCinema/polls/templates/polls/poll_detail.html
+++ b/ForumCinema/polls/templates/polls/poll_detail.html
@@ -3,30 +3,28 @@
 
 {% block content %}
 <div class="container">
-    <h1>Polls details page</h1>
-    {% if messages %}
-    <div class="messages">
-        {% for message in messages %}
-        <div {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+    <div class="row center">
+        <div class="col mt-5 d-flex justify-content-center">
+            <div class="card ">
+              <div class="card-body">
+                <h4 class="card-title text-center">{{ poll }}</h4>
+                <form action="{% url 'polls:vote' poll.pk poll.group.pk %}" method="POST">
+                    {% csrf_token %}
+                    {% for choice in poll.choice_set.all %}
+                    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+                    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label>
+                    <br>
+                    {% endfor %}
+                    <div class =" mt-4 d-flex justify-content-end">
+                        <a class="btn btn-outline-dark" href="{% url 'forum:detailgroup' poll.group.pk %}" >Torna al gruppo</a>
+                        <input type="submit" value="Vota" class="btn btn-primary mx-2">
+                    </div>
+                </form>
+              </div>
+            </div>
+            
         </div>
-        {% endfor %}
     </div>
-    {% endif %}
-    <hr>
-    <h2 class="mt-3 mb-3">{{ poll }}</h2>
-    <form action="{% url 'polls:vote' poll.pk poll.group.pk %}" method="POST">
-        {% csrf_token %}
-        {% for choice in poll.choice_set.all %}
-        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-        <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label>
-        <br>
-        {% endfor %}
-        <input type="submit" value="Vote" class="btn btn-primary mt-3">
-    </form>
-
 </div>
 
 {% endblock content %}
